@@ -840,6 +840,69 @@ return|return
 name|children
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|getMatchingChildren
+specifier|public
+name|Collection
+argument_list|<
+name|ChildScorer
+argument_list|>
+name|getMatchingChildren
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|List
+argument_list|<
+name|ChildScorer
+argument_list|>
+name|children
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|DisiWrapper
+name|w
+init|=
+name|getSubMatches
+argument_list|()
+init|;
+name|w
+operator|!=
+literal|null
+condition|;
+name|w
+operator|=
+name|w
+operator|.
+name|next
+control|)
+block|{
+name|children
+operator|.
+name|add
+argument_list|(
+operator|new
+name|ChildScorer
+argument_list|(
+name|w
+operator|.
+name|scorer
+argument_list|,
+literal|"SHOULD"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|children
+return|;
+block|}
 block|}
 end_class
 
