@@ -887,6 +887,382 @@ argument_list|)
 expr_stmt|;
 comment|// f2:search + f2:lucene
 block|}
+DECL|method|testDisjunctionMatches
+specifier|public
+name|void
+name|testDisjunctionMatches
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|BooleanQuery
+operator|.
+name|Builder
+name|bq1
+init|=
+operator|new
+name|BooleanQuery
+operator|.
+name|Builder
+argument_list|()
+decl_stmt|;
+name|bq1
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|F1
+argument_list|,
+literal|"lucene"
+argument_list|)
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|bq1
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PhraseQuery
+argument_list|(
+name|F2
+argument_list|,
+literal|"search"
+argument_list|,
+literal|"engine"
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|Weight
+name|w1
+init|=
+name|scorerSearcher
+operator|.
+name|createNormalizedWeight
+argument_list|(
+name|bq1
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|Scorer
+name|s1
+init|=
+name|w1
+operator|.
+name|scorer
+argument_list|(
+name|reader
+operator|.
+name|leaves
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|s1
+operator|.
+name|iterator
+argument_list|()
+operator|.
+name|nextDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|s1
+operator|.
+name|getMatchingChildren
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|BooleanQuery
+operator|.
+name|Builder
+name|bq2
+init|=
+operator|new
+name|BooleanQuery
+operator|.
+name|Builder
+argument_list|()
+decl_stmt|;
+name|bq2
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|F1
+argument_list|,
+literal|"lucene"
+argument_list|)
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|bq2
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PhraseQuery
+argument_list|(
+name|F2
+argument_list|,
+literal|"search"
+argument_list|,
+literal|"library"
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|Weight
+name|w2
+init|=
+name|scorerSearcher
+operator|.
+name|createNormalizedWeight
+argument_list|(
+name|bq2
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|Scorer
+name|s2
+init|=
+name|w2
+operator|.
+name|scorer
+argument_list|(
+name|reader
+operator|.
+name|leaves
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|s2
+operator|.
+name|iterator
+argument_list|()
+operator|.
+name|nextDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|s2
+operator|.
+name|getMatchingChildren
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMinShouldMatchMatches
+specifier|public
+name|void
+name|testMinShouldMatchMatches
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|BooleanQuery
+operator|.
+name|Builder
+name|bq
+init|=
+operator|new
+name|BooleanQuery
+operator|.
+name|Builder
+argument_list|()
+decl_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|F1
+argument_list|,
+literal|"lucene"
+argument_list|)
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|F2
+argument_list|,
+literal|"lucene"
+argument_list|)
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PhraseQuery
+argument_list|(
+name|F2
+argument_list|,
+literal|"search"
+argument_list|,
+literal|"library"
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|setMinimumNumberShouldMatch
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|Weight
+name|w
+init|=
+name|scorerSearcher
+operator|.
+name|createNormalizedWeight
+argument_list|(
+name|bq
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|Scorer
+name|s
+init|=
+name|w
+operator|.
+name|scorer
+argument_list|(
+name|reader
+operator|.
+name|leaves
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|s
+operator|.
+name|iterator
+argument_list|()
+operator|.
+name|nextDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|s
+operator|.
+name|getMatchingChildren
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testConjunctions
 specifier|public
 name|void
